--- a/texformat.tex
+++ b/texformat.tex
@@ -1,7 +1,6 @@
 \documentclass[a4]{jsarticle}
 \usepackage[dvipdfmx]{graphicx}
-\usepackage{caption}
-\captionsetup[figure, table]{labelsep=period}
+\usepackage[labelsep=period]{caption}
 \usepackage{listings, jlisting}
 
 \lstset{
