--- a/texformat.tex
+++ b/texformat.tex
@@ -1,27 +1,3 @@
-\documentclass[a4]{jsarticle}
-\usepackage[dvipdfmx]{graphicx}
-\usepackage[labelsep=period]{caption}
-\usepackage{listings, jlisting}
-
-\lstset{
-	language={C++},
-	basicstyle={},
-	identifierstyle={},
-	commentstyle={\bfseries},
-	keywordstyle={\bfseries},
-	ndkeywordstyle={},
-	stringstyle={\ttfamily},
-	frame={single},
-	framesep=5pt,
-	breaklines=true,
-% 	numbers=left,
-% 	numberstyle={\ttfamily},
-	tabsize=4
-}
-
-\title{}
-\author{}
-\date{}
 
 \begin{document}
 \maketitle
@@ -45,5 +21,9 @@
 \begin{description}
 	\item[項目] 事柄
 \end{description}
+
+\begin{thebibliography}{9}
+	\bibitem{label}
+\end{thebibliography}
 
 \end{document}
