alter font in code

--- a/texformat.tex
+++ b/texformat.tex
@@ -5,17 +5,17 @@
 
 \lstset {
 	language={C++},
-	basicstyle={},
-	identifierstyle={},
-	commentstyle={\bfseries},
-	keywordstyle={\bfseries},
+	basicstyle={\tt},
+	identifierstyle={\tt},
+	commentstyle={\bf},
+	keywordstyle={\bf},
 	ndkeywordstyle={},
 	stringstyle={\ttfamily},
 	frame={single},
 	framesep=5pt,
 	breaklines=true,
-% 	numbers=left,
-% 	numberstyle={\ttfamily},
+	numbers=left,
+	numberstyle={\ttfamily},
 	tabsize=4
 }
 
