add package to decide size of blank space

--- a/texformat.tex
+++ b/texformat.tex
@@ -3,6 +3,7 @@
 \usepackage[labelsep=period]{caption}
 \usepackage{listings, jlisting}
 \usepackage{here}
+\usepackage[top=25truemm, bottom=25truemm, left=25truemm, right=25truemm]{geometry}
 
 \lstset {
 	language={C++},
