add amsmath and use cfrac easily

--- a/texformat.tex
+++ b/texformat.tex
@@ -2,6 +2,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage[labelsep=period]{caption}
 \usepackage{listings, jlisting}
+\usepackage[]{amsmath}
 \usepackage{here}
 \usepackage[top=25truemm, bottom=25truemm, left=25truemm, right=25truemm]{geometry}
 \usepackage[]{url}
